tests/paczka1/small_fuzzy/95081967.err
Error in line 9: 1hYxjq A491 34,9
Error in line 10: 1hYxjq S48 83,5
